changed layout a bit, hero comp

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -153,3 +153,12 @@ a {
     color-scheme: dark;
   }
 }
+
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 6rem;
+  min-height: 100vh;
+}
