--- a/styles/globals.css
+++ b/styles/globals.css
@@ -136,13 +136,11 @@ body {
   margin: 0;
   font-family: "Roboto", sans-serif;
 }
-
 h1,
 h2,
 h3 {
   font-family: "Oswald", "Roboto", sans-serif;
 }
-
 a {
   color: inherit;
   text-decoration: none;
@@ -160,5 +158,5 @@ main {
   justify-content: space-between;
   align-items: center;
   padding: 6rem;
-  min-height: 100vh;
+  min-height: calc(100vh - 6rem);
 }
