--- a/app/components/posts/post-detail/styles/post-header.module.css
+++ b/app/components/posts/post-detail/styles/post-header.module.css
@@ -1,7 +1,7 @@
-
 .header {
   padding-bottom: var(--size-8);
-  border-bottom: 8px solid var(--color-primary-100);
+  border-bottom: 8px solid var(--color-primary-300);
+  border-radius: 0.75rem;
   margin: var(--size-4) 0;
   display: flex;
   flex-direction: column-reverse;
@@ -9,15 +9,13 @@
   align-items: center;
   gap: 1rem;
 }
-
 .header h1 {
   font-size: var(--size-8);
-  color: var(--color-primary-500);
+  color: var(--color-primary-400);
   margin: 0;
   line-height: initial;
   text-align: center;
 }
-
 .header img {
   object-fit: cover;
   width: 200px;
@@ -30,9 +28,8 @@
     flex-direction: row;
     align-items: flex-end;
   }
-
   .header h1 {
-    font-size: var(--size-16);
+    font-size: var(--size-12);
     text-align: left;
   }
 }
