--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Roboto&family=Source+Sans+Pro:wght@300&display=swap");
-
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -129,17 +127,12 @@ body {
   --size-5: 1.25rem;
   --size-6: 1.5rem;
   --size-8: 2rem;
+  --size-12: 3rem;
   --size-16: 4rem;
   --size-20: 5rem;
   --size-40: 10rem;
 
   margin: 0;
-  font-family: "Roboto", sans-serif;
-}
-h1,
-h2,
-h3 {
-  font-family: "Oswald", "Roboto", sans-serif;
 }
 a {
   color: inherit;
@@ -157,12 +150,12 @@ main {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 4rem 0.5rem;
+  padding: 2rem 0.5rem;
   min-height: calc(100vh - 6rem);
 }
 
 @media (min-width: 701px) {
   main {
-    padding: 6rem;
+    padding: 4rem 6rem;
   }
 }
