--- a/app/components/posts/post-detail/styles/post-header.module.css
+++ b/app/components/posts/post-detail/styles/post-header.module.css
@@ -9,7 +9,7 @@
   align-items: center;
   gap: 1rem;
 }
-.header h1 {
+.header > h1 {
   font-size: var(--size-8);
   color: var(--color-primary-400);
   margin: 0;
@@ -18,7 +18,7 @@
 }
 .header img {
   object-fit: cover;
-  width: 200px;
+  width: 220px;
   height: 120px;
 }
 
