--- a/app/components/posts/post-detail/styles/post-content.module.css
+++ b/app/components/posts/post-detail/styles/post-content.module.css
@@ -9,19 +9,27 @@
   border-radius: 6px;
   padding: var(--size-4);
 }
+.content > * {
+  margin-bottom: 1rem;
+}
 .content > h1 {
   border-bottom: 2px solid var(--color-grey-600);
   padding-bottom: 0.5rem;
-  margin-bottom: 1rem;
 }
 .content p {
   color: var(--color-grey-200);
   margin-bottom: 1rem;
 }
+.content > :is(ul, ol) {
+  margin-left: 1.5rem;
+}
 .content .image {
   margin: var(--size-4) auto;
   width: 100%;
   max-width: 600px;
+}
+.content img {
+  flex: 1;
 }
 
 @media (min-width: 768px) {
