Some accessability adjustments

--- a/components/home/styles/featured-posts.module.css
+++ b/components/home/styles/featured-posts.module.css
@@ -4,14 +4,16 @@
   margin: var(--size-8) auto;
 }
 
-.latest h2 {
-  font-size: var(--size-8);
-  color: var(--color-primary-400);
+.latest h1 {
+  color: var(--color-primary-300);
+  text-shadow: #5e204bb3 0.2rem 0.2rem;
   text-align: center;
+  font-weight: 700;
+  font-size: var(--size-8);
 }
 
 @media (min-width: 768px) {
-  .latest h2 {
+  .latest h1 {
     font-size: var(--size-16);
   }
 }
