--- a/app/(routes)/globals.css
+++ b/app/(routes)/globals.css
@@ -38,7 +38,7 @@
     --color-primary-50: #c8b3ce;
     --color-primary-100: #a07aaa;
     --color-primary-200: #884c97;
-    --color-primary-300: #843897;
+    --color-primary-300: #971ab6;
     --color-primary-400: #732392;
     --color-primary-500: #5a097a;
     --color-primary-600: #480264;
