--- a/app/(routes)/globals.css
+++ b/app/(routes)/globals.css
@@ -19,6 +19,8 @@
     --markdown-p-color: var(--color-gray-700);
     --accent: 240 4.8% 95.9%;
     --accent-foreground: 240 5.9% 10%;
+    --success: 120 100% 50%;
+    --success-foreground: 210 40% 98%;
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
     --border: 240 5.9% 90%;
@@ -78,6 +80,8 @@
     --markdown-p-color: var(--color-gray-200);
     --accent: 12 6.5% 15.1%;
     --accent-foreground: 0 0% 98%;
+    --success: 120 63% 31%;
+    --success-foreground: 210 40% 98%;
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 0 85.7% 97.3%;
     --border: 240 3.7% 15.9%;
