--- a/app/(routes)/globals.css
+++ b/app/(routes)/globals.css
@@ -21,6 +21,8 @@
     --accent-foreground: 240 5.9% 10%;
     --success: 120 100% 50%;
     --success-foreground: 210 40% 98%;
+    --pending: 204, 78%, 42%;
+    --pending-foreground: 204, 78%, 42%;
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
     --border: 240 5.9% 90%;
@@ -80,6 +82,8 @@
     --markdown-p-color: var(--color-gray-200);
     --accent: 12 6.5% 15.1%;
     --accent-foreground: 0 0% 98%;
+    --pending: 204, 78%, 42%;
+    --pending-foreground: 204, 78%, 42%;
     --success: 120 63% 31%;
     --success-foreground: 210 40% 98%;
     --destructive: 0 62.8% 30.6%;
@@ -89,13 +93,28 @@
     --ring: 346.8 77.2% 49.8%;
   }
 }
-
+.asd {
+  color: hsl(204, 78%, 42%);
+}
 @layer base {
   * {
     @apply border-border;
   }
   body {
     @apply bg-background text-foreground;
+  }
+  #notifications > .alertComp {
+    animation: slide-in-from-right 700ms ease-out;
+  }
+  @keyframes slide-in-from-right {
+    0% {
+      opacity: 0;
+      transform: translateX(20%);
+    }
+    100% {
+      opacity: 1;
+      transform: translateX(0);
+    }
   }
 }
 
