Avatar icon optional resize

--- a/components/profile/styles/profile-form.module.css
+++ b/components/profile/styles/profile-form.module.css
@@ -20,6 +20,7 @@
   border: 1px solid #38015c;
   padding: 0.25rem;
   background-color: #f7f0fa;
+  color: black;
 }
 .action {
   margin-top: 1.5rem;
