--- a/app/(routes)/globals.tailwind.css
+++ b/app/(routes)/globals.tailwind.css
@@ -179,4 +179,32 @@
     max-height: 1000px;
     padding: 0 1rem 1rem;
   }
+
+  /* ================= Skeleton ================= */
+
+  .skeleton {
+    opacity: 0.9;
+    animation: skeleton-loading 1s linear infinite alternate;
+  }
+  .skeleton p,
+  .skeleton span {
+    width: 100%;
+    height: 0.5rem;
+    margin-bottom: 0.25rem;
+    border-radius: 0.125rem;
+  }
+  .skeleton p:last-of-type {
+    width: 70%;
+  }
+  .skeleton span {
+    width: 10%;
+  }
+  @keyframes skeleton-loading {
+    0% {
+      background-color: hsl(180, 32%, 75%);
+    }
+    100% {
+      background-color: hsl(180, 32%, 85%);
+    }
+  }
 }
